--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "EXERC_2.C": "cpp",
-        "exerc_3": "c"
+        "exerc_3": "c",
+        "EXERC_4.C": "cpp"
     }
 }
